--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -678,7 +678,29 @@ Participants finish 4 session of experiment, and each include one experiment as 
 
 We conducted 4 (task type: morality, emotion, person, scene) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA. The results revealed no effect of task type (\(F(2.95, 108.97) = 1.18\), \(\mathit{MSE} = 0.76\), \(p = .321\), \(\hat{\eta}^2_G = .006\)), but revealed effect of valence, \(F(1.85, 68.49) = 29.70\), \(\mathit{MSE} = 0.29\), \(p < .001\), \(\hat{\eta}^2_G = .034\), and their interactions, \(F(4.68, 173.09) = 5.85\), \(\mathit{MSE} = 0.31\), \(p < .001\), \(\hat{\eta}^2_G = .019\).
 
-To understand the interaction, we separated four different tasks. For the morality task, the valence effect \(F(1.96, 72.66) = 2.22\), \(\mathit{MSE} = 0.21\), \(p = .116\), \(\hat{\eta}^2_G = .008\); for emotion, \(F(1.69, 62.65) = 5.28\), \(\mathit{MSE} = 0.30\), \(p = .011\), \(\hat{\eta}^2_G = .030\); for the person appearance, \(F(1.73, 64.02) = 27.22\), \(\mathit{MSE} = 0.26\), \(p < .001\), \(\hat{\eta}^2_G = .088\); for scene appearance, \(F(1.79, 66.4) = 14.02\), \(\mathit{MSE} = 0.34\), \(p < .001\), \(\hat{\eta}^2_G = .072\).
+To understand the interaction, we separated four different tasks. For the morality task, the valence effect \(F(1.96, 72.66) = 2.22\), \(\mathit{MSE} = 0.21\), \(p = .116\), \(\hat{\eta}^2_G = .008\).
+
+For emotion conditions, we found that main effect of valence \(F(1.69, 62.65) = 5.28\), \(\mathit{MSE} = 0.30\), \(p = .011\), \(\hat{\eta}^2_G = .030\). Post-hoc comparison showed that good (2.13, s.e. = 0.161) was not different from neutral condition (2.10, se = 0.125), \emph{t}(37) = 0.163, \emph{p} = 0.9854, but both are higher than than bad condition (1.79, se = 0.148) (neutral \textgreater{} bad, \emph{t}(37) = 3.588, \emph{p} = 0.0027; good \textgreater{} bad, \emph{t}(37) = 2.62, \emph{p} = 0.0332).
+
+For the person appearance, the main effect of valence is significant, \(F(1.73, 64.02) = 27.22\), \(\mathit{MSE} = 0.26\), \(p < .001\), \(\hat{\eta}^2_G = .088\). Post-hoc analysis found that good condition (2.4, se = 0.167) was higher than both neutral (1.71, se = 0.175, \emph{t}(37) = 5.482, \emph{p} \textless{} .0001) and bad (1.70, se = 0.182, \emph{t}(37) = 6.365, \emph{p} \textless{} .0001), but neutral and bad condition are not different (\emph{t}(37) = 0.197, \emph{p} =0.9788).
+
+For scene appearance, the main effect of valence is significnat \(F(1.79, 66.4) = 14.02\), \(\mathit{MSE} = 0.34\), \(p < .001\), \(\hat{\eta}^2_G = .072\). Post-hoc analysis revealed the same pattern as in person task: good condition (2.23, se = 0.156) is higher than both neutral (1.57, se = 0.178, \emph{t}(37) =4.683, \emph{p} = 0.0001) and bad (1.77, se = 0.148, \emph{t}(37) = 3.414, \emph{p} = 0.0044), but neutral and bad conditions are not different (\emph{t}(37) = -1.893, \emph{p} = 0.1549)
+
+\begin{figure}
+
+{\centering \includegraphics{./figures/p_exp5a_match_dprime} 
+
+}
+
+\caption{...}(\#fig:test figure)
+\end{figure}
+
+\hypertarget{reaction-time}{%
+\subsubsection{Reaction time}\label{reaction-time}}
+
+As in previous experiment, we focused our analysis on the matched trials. We conducted 4 (task type: morality, emotion, beauty of person, beauty of scene) by 3 (Valence: good, neutral, bad) repeated measure ANOVA for matched trials only.
+
+We din't found the main effect of task type (\(F(2.06, 76.12) = 0.56\), \(\mathit{MSE} = 7,041.60\), \(p = .577\), \(\hat{\eta}^2_G = .004\)), but the main effect of valence (\(F(1.82, 67.23) = 53.98\), \(\mathit{MSE} = 1,911.31\), \(p < .001\), \(\hat{\eta}^2_G = .076\)), and intercation between Matchness and Valence (\(F(3.58, 132.31) = 3.12\), \(\mathit{MSE} = 2,663.50\), \(p = .021\), \(\hat{\eta}^2_G = .013\)). We then analyze the effect of valence for each task type. We found that for all four task, the valence effect was significant: morality (\(F(1.89, 69.98) = 8.66\), \(\mathit{MSE} = 1,875.36\), \(p = .001\), \(\hat{\eta}^2_G = .036\)), emotion (\(F(1.48, 54.68) = 9.74\), \(\mathit{MSE} = 2,664.24\), \(p = .001\), \(\hat{\eta}^2_G = .072\)), person (\(F(1.78, 65.78) = 39.39\), \(\mathit{MSE} = 1,310.51\), \(p < .001\), \(\hat{\eta}^2_G = .162\)), scene (\(F(1.75, 64.69) = 17.71\), \(\mathit{MSE} = 1,820.73\), \(p < .001\), \(\hat{\eta}^2_G = .102\)). Post-hoc analyses revealed that for emotion task, the good condition is reacted faster than bad condition (\emph{t}(37) = 3.475, \emph{p} = 0.0037) but not neutral conditions are not different ((\emph{t}(37) = -0.77, \emph{p} = 0.7236)). The bad condiiton is longer than the neutral (\emph{t}(37) = 5.09, \emph{p} \textless{} 0.0001). The pattern is different for morality, person, and scence tasks, which showed that good is faster than both neutral ((\emph{t}(37) = {[}-7.289 -2.4{]}, \emph{p} \textless{} 0.0548)) and bad (\emph{t}(37) = {[}-7.232 -3.817{]}, \emph{p} \textless{} 0.0014).
 
 \hypertarget{experiment-6a-eeg-study-1}{%
 \section{Experiment 6a: EEG study 1}\label{experiment-6a-eeg-study-1}}
