--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -151,7 +151,7 @@ For participants recruited in Wenzhou University, they finished the experiment i
 \hypertarget{data-analysis}{%
 \subsection{Data analysis}\label{data-analysis}}
 
-We reported all the measurements, analysis and results in all the experiments in the current study. All data were first pre-processed using R R (Version 3.6.0; R Core Team, 2018) and the R-packages \emph{afex} (Version 0.23.0; Singmann, Bolker, Westfall, \& Aust, 2019), \emph{BayesFactor} (Version 0.9.12.4.2; Morey \& Rouder, 2018), \emph{boot} (Version 1.3.22; Davison \& Hinkley, 1997; Gerlanc \& Kirby, 2015), \emph{bootES} (Version 1.2; Gerlanc \& Kirby, 2015), \emph{coda} (Version 0.19.2; Plummer, Best, Cowles, \& Vines, 2006), \emph{corrplot2017} (Wei \& Simko, 2017), \emph{dplyr} (Version 0.8.0.1; Wickham et al., 2019), \emph{emmeans} (Version 1.3.4; Lenth, 2019), \emph{forcats} (Version 0.4.0; Wickham, 2019a), \emph{Formula} (Version 1.2.3; Zeileis \& Croissant, 2010), \emph{ggformula} (Version 0.9.1; Kaplan \& Pruim, 2019), \emph{ggplot2} (Version 3.1.1; Wickham, 2016), \emph{ggstance} (Version 0.3.1; Henry, Wickham, \& Chang, 2018), \emph{ggstatsplot} (Version 0.0.10; Patil \& Powell, 2018), \emph{Hmisc} (Version 4.2.0; Harrell Jr, Charles Dupont, \& others., 2019), \emph{lattice} (Version 0.20.38; Sarkar, 2008), \emph{lme4} (Version 1.1.21; Bates, Mächler, Bolker, \& Walker, 2015), \emph{MASS} (Version 7.3.51.4; Venables \& Ripley, 2002), \emph{Matrix} (Version 1.2.17; Bates \& Maechler, 2019), \emph{MBESS} (Version 4.4.3; Kelley, 2018), \emph{mosaic} (Version 1.5.0; Pruim, Kaplan, \& Horton, 2017, 2018), \emph{mosaicData} (Version 0.17.0; Pruim et al., 2018), \emph{multcomp} (Version 1.4.10; Hothorn, Bretz, \& Westfall, 2008), \emph{mvtnorm} (Version 1.0.10; Genz \& Bretz, 2009), \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018), \emph{plyr} (Version 1.8.4; Wickham et al., 2019; Wickham, 2011), \emph{psych} (Version 1.8.12; Revelle, 2018), \emph{purrr} (Version 0.3.2; Henry \& Wickham, 2019), \emph{RColorBrewer} (Version 1.1.2; Neuwirth, 2014), \emph{readr} (Version 1.3.1; Wickham, Hester, \& Francois, 2018), \emph{reshape2} (Version 1.4.3; Wickham, 2007), \emph{stringr} (Version 1.4.0; Wickham, 2019b), \emph{survival} (Version 2.44.1.1; Terry M. Therneau \& Patricia M. Grambsch, 2000), \emph{TH.data} (Version 1.0.10; Hothorn, 2019), \emph{tibble} (Version 2.1.1; Müller \& Wickham, 2019), \emph{tidyr} (Version 0.8.3; Wickham \& Henry, 2019), and \emph{tidyverse} (Version 1.2.1; Wickham, 2017). The clean data were analyzed using JASP (0.8.6.0, www.jasp-stats.org, (Love et al., 2019)). Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
+We reported all the measurements, analysis and results in all the experiments in the current study. All data were first pre-processed using R R (Version 3.6.0; R Core Team, 2018) and the R-packages \emph{afex} (Version 0.23.0; Singmann, Bolker, Westfall, \& Aust, 2019), \emph{BayesFactor} (Version 0.9.12.4.2; Morey \& Rouder, 2018), \emph{boot} (Version 1.3.22; Davison \& Hinkley, 1997; Gerlanc \& Kirby, 2015), \emph{bootES} (Version 1.2; Gerlanc \& Kirby, 2015), \emph{coda} (Version 0.19.2; Plummer, Best, Cowles, \& Vines, 2006), \emph{corrplot2017} (Wei \& Simko, 2017), \emph{dplyr} (Version 0.8.0.1; Wickham et al., 2019), \emph{emmeans} (Version 1.3.4; Lenth, 2019), \emph{forcats} (Version 0.4.0; Wickham, 2019a), \emph{Formula} (Version 1.2.3; Zeileis \& Croissant, 2010), \emph{ggformula} (Version 0.9.1; Kaplan \& Pruim, 2019), \emph{ggplot2} (Version 3.1.1; Wickham, 2016), \emph{ggstance} (Version 0.3.1; Henry, Wickham, \& Chang, 2018), \emph{ggstatsplot} (Version 0.0.10; Patil \& Powell, 2018), \emph{here} (Version 0.1; Müller, 2017), \emph{Hmisc} (Version 4.2.0; Harrell Jr, Charles Dupont, \& others., 2019), \emph{lattice} (Version 0.20.38; Sarkar, 2008), \emph{lme4} (Version 1.1.21; Bates, Mächler, Bolker, \& Walker, 2015), \emph{MASS} (Version 7.3.51.4; Venables \& Ripley, 2002), \emph{Matrix} (Version 1.2.17; Bates \& Maechler, 2019), \emph{MBESS} (Version 4.4.3; Kelley, 2018), \emph{mosaic} (Version 1.5.0; Pruim, Kaplan, \& Horton, 2017, 2018), \emph{mosaicData} (Version 0.17.0; Pruim et al., 2018), \emph{multcomp} (Version 1.4.10; Hothorn, Bretz, \& Westfall, 2008), \emph{mvtnorm} (Version 1.0.10; Genz \& Bretz, 2009), \emph{papaja} (Version 0.1.0.9842; Aust \& Barth, 2018), \emph{plyr} (Version 1.8.4; Wickham et al., 2019; Wickham, 2011), \emph{psych} (Version 1.8.12; Revelle, 2018), \emph{purrr} (Version 0.3.2; Henry \& Wickham, 2019), \emph{RColorBrewer} (Version 1.1.2; Neuwirth, 2014), \emph{readr} (Version 1.3.1; Wickham, Hester, \& Francois, 2018), \emph{reshape2} (Version 1.4.3; Wickham, 2007), \emph{stringr} (Version 1.4.0; Wickham, 2019b), \emph{survival} (Version 2.44.1.1; Terry M. Therneau \& Patricia M. Grambsch, 2000), \emph{TH.data} (Version 1.0.10; Hothorn, 2019), \emph{tibble} (Version 2.1.1; Müller \& Wickham, 2019), \emph{tidyr} (Version 0.8.3; Wickham \& Henry, 2019), and \emph{tidyverse} (Version 1.2.1; Wickham, 2017). The clean data were analyzed using JASP (0.8.6.0, www.jasp-stats.org, (Love et al., 2019)). Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
 
 We analyzed accuracy performance using a signal detection approach, as in Sui et al.~(2012). The performance in each match condition was combined with that in the nonmatching condition with the same shape to form a measure of d'. Trials without response were coded either as \enquote{miss} (matched trials) or \enquote{false alarm} (mismatched trials). The d' were then analyzed using repeated measures analyses of variance (repeated measures ANOVA).
 
@@ -197,6 +197,16 @@ As we describe in the general method section.
 
 \hypertarget{results}{%
 \subsection{Results}\label{results}}
+
+\begin{verbatim}
+## Warning: Removed 18 rows containing missing values (geom_flat_violin).
+\end{verbatim}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex1a-dprime-rt-1.pdf}
+\caption{\label{fig:ex1a-dprime-rt}RT and \emph{d} prime of Experiment 1a.}
+\end{figure}
 
 \hypertarget{analaysis-of-d-prime.}{%
 \subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.}}
@@ -686,21 +696,17 @@ For the person appearance, the main effect of valence is significant, \(F(1.73, 
 
 For scene appearance, the main effect of valence is significnat \(F(1.79, 66.4) = 14.02\), \(\mathit{MSE} = 0.34\), \(p < .001\), \(\hat{\eta}^2_G = .072\). Post-hoc analysis revealed the same pattern as in person task: good condition (2.23, se = 0.156) is higher than both neutral (1.57, se = 0.178, \emph{t}(37) =4.683, \emph{p} = 0.0001) and bad (1.77, se = 0.148, \emph{t}(37) = 3.414, \emph{p} = 0.0044), but neutral and bad conditions are not different (\emph{t}(37) = -1.893, \emph{p} = 0.1549)
 
-\begin{figure}
-
-{\centering \includegraphics{./figures/p_exp5a_match_dprime} 
-
-}
-
-\caption{...}(\#fig:test figure)
-\end{figure}
-
 \hypertarget{reaction-time}{%
 \subsubsection{Reaction time}\label{reaction-time}}
 
 As in previous experiment, we focused our analysis on the matched trials. We conducted 4 (task type: morality, emotion, beauty of person, beauty of scene) by 3 (Valence: good, neutral, bad) repeated measure ANOVA for matched trials only.
 
-We din't found the main effect of task type (\(F(2.06, 76.12) = 0.56\), \(\mathit{MSE} = 7,041.60\), \(p = .577\), \(\hat{\eta}^2_G = .004\)), but the main effect of valence (\(F(1.82, 67.23) = 53.98\), \(\mathit{MSE} = 1,911.31\), \(p < .001\), \(\hat{\eta}^2_G = .076\)), and intercation between Matchness and Valence (\(F(3.58, 132.31) = 3.12\), \(\mathit{MSE} = 2,663.50\), \(p = .021\), \(\hat{\eta}^2_G = .013\)). We then analyze the effect of valence for each task type. We found that for all four task, the valence effect was significant: morality (\(F(1.89, 69.98) = 8.66\), \(\mathit{MSE} = 1,875.36\), \(p = .001\), \(\hat{\eta}^2_G = .036\)), emotion (\(F(1.48, 54.68) = 9.74\), \(\mathit{MSE} = 2,664.24\), \(p = .001\), \(\hat{\eta}^2_G = .072\)), person (\(F(1.78, 65.78) = 39.39\), \(\mathit{MSE} = 1,310.51\), \(p < .001\), \(\hat{\eta}^2_G = .162\)), scene (\(F(1.75, 64.69) = 17.71\), \(\mathit{MSE} = 1,820.73\), \(p < .001\), \(\hat{\eta}^2_G = .102\)). Post-hoc analyses revealed that for emotion task, the good condition is reacted faster than bad condition (\emph{t}(37) = 3.475, \emph{p} = 0.0037) but not neutral conditions are not different ((\emph{t}(37) = -0.77, \emph{p} = 0.7236)). The bad condiiton is longer than the neutral (\emph{t}(37) = 5.09, \emph{p} \textless{} 0.0001). The pattern is different for morality, person, and scence tasks, which showed that good is faster than both neutral ((\emph{t}(37) = {[}-7.289 -2.4{]}, \emph{p} \textless{} 0.0548)) and bad (\emph{t}(37) = {[}-7.232 -3.817{]}, \emph{p} \textless{} 0.0014).
+We din't found the main effect of task type (\(F(2.06, 76.12) = 0.56\), \(\mathit{MSE} = 7,041.60\), \(p = .577\), \(\hat{\eta}^2_G = .004\)), but the main effect of valence (\(F(1.82, 67.23) = 53.98\), \(\mathit{MSE} = 1,911.31\), \(p < .001\), \(\hat{\eta}^2_G = .076\)), and intercation between Matchness and Valence (\(F(3.58, 132.31) = 3.12\), \(\mathit{MSE} = 2,663.50\), \(p = .021\), \(\hat{\eta}^2_G = .013\)). We then analyze the effect of valence for each task type. We found that for all four task, the valence effect was significant: morality (\(F(1.89, 69.98) = 8.66\), \(\mathit{MSE} = 1,875.36\), \(p = .001\), \(\hat{\eta}^2_G = .036\)), emotion (\(F(1.48, 54.68) = 9.74\), \(\mathit{MSE} = 2,664.24\), \(p = .001\), \(\hat{\eta}^2_G = .072\)), person (\(F(1.78, 65.78) = 39.39\), \(\mathit{MSE} = 1,310.51\), \(p < .001\), \(\hat{\eta}^2_G = .162\)), scene (\(F(1.75, 64.69) = 17.71\), \(\mathit{MSE} = 1,820.73\), \(p < .001\), \(\hat{\eta}^2_G = .102\)). Post-hoc analyses revealed that for emotion task, the good condition is reacted faster than bad condition (\emph{t}(37) = 3.475, \emph{p} = 0.0037) but not neutral conditions are not different ((\emph{t}(37) = -0.77, \emph{p} = 0.7236)). The bad condiiton is longer than the neutral (\emph{t}(37) = 5.09, \emph{p} \textless{} 0.0001). The pattern is different for morality, person, and scence tasks, which showed that good is faster than both neutral ((\emph{ts}(37) = {[}-7.289 -2.4{]}, \emph{ps} \textless{} 0.0548)) and bad (\emph{ts}(37) = {[}-7.232 -3.817{]}, \emph{ps} \textless{} 0.0014).
+
+\hypertarget{discussion-5}{%
+\subsection{Discussion}\label{discussion-5}}
+
+Morality is not specific but reflected an general positive effect. However, this positive effect might not same as the emotion effect.
 
 \hypertarget{experiment-6a-eeg-study-1}{%
 \section{Experiment 6a: EEG study 1}\label{experiment-6a-eeg-study-1}}
@@ -869,6 +875,9 @@ Lenth, R. (2019). \emph{Emmeans: Estimated marginal means, aka least-squares mea
 
 \leavevmode\hypertarget{ref-R-BayesFactor}{}%
 Morey, R. D., \& Rouder, J. N. (2018). \emph{BayesFactor: Computation of bayes factors for common designs}. Retrieved from \url{https://CRAN.R-project.org/package=BayesFactor}
+
+\leavevmode\hypertarget{ref-R-here}{}%
+Müller, K. (2017). \emph{Here: A simpler way to find your files}. Retrieved from \url{https://CRAN.R-project.org/package=here}
 
 \leavevmode\hypertarget{ref-R-tibble}{}%
 Müller, K., \& Wickham, H. (2019). \emph{Tibble: Simple data frames}. Retrieved from \url{https://CRAN.R-project.org/package=tibble}
