--- a/r-references.bib
+++ b/r-references.bib
@@ -299,3 +299,10 @@
   note = {R package version 0.17.0},
   url = {https://CRAN.R-project.org/package=mosaicData},
 }
+@Manual{R-here,
+  title = {here: A Simpler Way to Find Your Files},
+  author = {Kirill Müller},
+  year = {2017},
+  note = {R package version 0.1},
+  url = {https://CRAN.R-project.org/package=here},
+}
